# pbnp_demo

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml  setup.cfg  setup.py
scripts/: test.py  test_gadget.py  test_generator.py
src/cpp/: CMakeLists.txt  gadget.cpp  gadget.hpp  generator.cpp  generator.hpp  neutron.cpp  neutron.hpp
src/cpp/tests/: test.cpp  test_neutron.cpp
src/pbnp/: __init__.py  bindings.cpp  test.py
